--- a/themes/supersimple/layouts/partials/header.html
+++ b/themes/supersimple/layouts/partials/header.html
@@ -43,8 +43,8 @@
                 </ul>
             </nav>
             {{ if not .Params.hideDate -}}
-            <time datetime='{{ .Date.Format "2006-01-02T15:04:05Z0700" }}' class="post-date">Updated {{- .Date.Format
-                "Jan 2, 2006" -}}</time>
+            <time datetime='{{ .Date.Format "2006-01-02T15:04:05Z0700" }}' class="post-date">Updated {{ .Date.Format
+                "Jan 2, 2006" }}</time>
             {{- end }}
         </div>
     </div>
