Add meta description, analytics

--- a/themes/supersimple/layouts/partials/head.html
+++ b/themes/supersimple/layouts/partials/head.html
@@ -3,8 +3,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     {{- hugo.Generator -}}
 
+    <script defer src="/_vercel/insights/script.js"></script>
+
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {{ if .Description -}}
+    <meta name="description" content="{{ .Description }}">
+    {{- else -}}
+    <meta name="description" content='{{ substr (partial "get-summary.html" . | plainify) 0 300 }}'>
+    {{- end }}
 
     <link rel="icon" href="/favicon.png">
     <link rel="icon" href="/favicon.svg">
@@ -14,7 +22,7 @@
     {{- else -}}
     <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
     {{- end }}
-    <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}" />
+
     {{ $base := "static/fonts" }}
     {{ range readDir $base -}}
     {{ $folder := .Name }}
