Updates 404 Page Adds video shortcode

--- a/themes/supersimple/assets/styles/_main.scss
+++ b/themes/supersimple/assets/styles/_main.scss
@@ -45,6 +45,7 @@ body {
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 1.2rem;
+    height: 1.2rem;
 }
 
 *::-webkit-scrollbar-track {
