--- a/themes/supersimple/assets/styles/footer.scss
+++ b/themes/supersimple/assets/styles/footer.scss
@@ -73,6 +73,7 @@ footer {
                 .back-to-top {
                     .footer-arrow {
                         display: inline-block;
+                        transition: transform 0.15s ease-in-out;
                         transform: translateY(0.15em);
                     }
 
