--- a/themes/supersimple/assets/styles/shortcodes.scss
+++ b/themes/supersimple/assets/styles/shortcodes.scss
@@ -334,6 +334,36 @@ figure {
     color: $c4;
     font-style: italic;
   }
+
+  &.video {
+    video {
+      width: 100%;
+    }
+    progress {
+      width: 100%;
+      height: 7px;
+      display: block;
+      margin: 0;
+      margin-top: -6px;
+      border: none;
+
+      &::-webkit-progress-bar {
+        background-color: $c9;
+      }
+
+      &::-webkit-progress-value {
+        background-color: $p3;
+      }
+      
+      &::-moz-progress-bar {
+        background-color: $p3;
+      }
+
+      &::-ms-fill {
+        background-color: $p3;
+      }
+    }
+  }
 }
 
 .logo {
