--- a/themes/supersimple/assets/styles/typography.scss
+++ b/themes/supersimple/assets/styles/typography.scss
@@ -155,6 +155,30 @@ a.link-button {
   }
 }
 
+.highlight pre {
+  background-color: unset !important;
+
+  code {
+    border-radius: 0.5rem;
+    display: block;
+    padding: 1rem;
+    overflow: auto;
+    box-sizing: border-box;
+    background-color: $c2;
+    font-size: 1rem;
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #ffffff34;
+      border-radius: 10rem;
+      border: 0.38rem solid $c2;
+  
+      &:hover {
+          background-color: #ffffff80;
+      }
+  }
+  }
+}
+
 @media screen and (max-width: 800px) {
   p {
     font-size: 1.15rem;
