--- a/themes/supersimple/layouts/partials/aside.html
+++ b/themes/supersimple/layouts/partials/aside.html
@@ -12,6 +12,14 @@
 </a>
 {{ end }}
 
+{{/*  Carve out for 404 page  */}}
+{{/*  Wish I could do it better  */}}
+{{ if eq .Kind "404" }}
+{{/*  <p>This page couldn't be found.</p>
+<p>Try heading <a href="/">home</a>.</p>  */}}
+{{ partial "svg/slant-face.svg" . }}
+{{ end }}
+
 {{ if .Page.IsDescendant (.Site.GetPage "/projects")}}
 {{ if  eq .Page.Parent (.Site.GetPage "/projects")}}
 {{ if ne (len .Pages) 0}}
