Fixes selection in code blocks

--- a/themes/supersimple/assets/styles/typography.scss
+++ b/themes/supersimple/assets/styles/typography.scss
@@ -175,7 +175,12 @@ a.link-button {
       &:hover {
           background-color: #ffffff80;
       }
-  }
+    }
+
+    * ::selection {
+      background-color: $c4;
+      // color: $c0;
+    }
   }
 }
 
