Added related pages on 404

--- a/themes/supersimple/assets/styles/content.scss
+++ b/themes/supersimple/assets/styles/content.scss
@@ -48,6 +48,12 @@ svg.slant-face {
     }
 }
 
+#results {
+    h2 {
+        margin-top: 0;
+    }
+}
+
 @media screen and (max-width: 800px) {
     .post {
         display: block;
