--- a/themes/supersimple/assets/styles/shortcodes.scss
+++ b/themes/supersimple/assets/styles/shortcodes.scss
@@ -126,6 +126,7 @@
       box-sizing: border-box;
       padding: 1.3rem;
       overflow: hidden;
+      flex-grow: 1;
 
       .pli-date {
         float: right;
