--- a/themes/supersimple/layouts/partials/get-summary.html
+++ b/themes/supersimple/layouts/partials/get-summary.html
@@ -1,5 +1,7 @@
 {{ if .Params.summary }}
 {{ .Params.summary }}
+{{ else if .Description }}
+{{ .Description }}
 {{ else }}
 {{ $stripped := replaceRE `(?s)<figure.*?>.*?</figure>` "" .Content }}
 {{ (delimit (findRE `(?s)<p.*?>.*?</p>` $stripped) " ") | plainify | safeHTML }}
