--- a/themes/supersimple/assets/styles/global.scss
+++ b/themes/supersimple/assets/styles/global.scss
@@ -16,10 +16,6 @@ $c8: #c0c0c0;
 $c9: #ececec;
 $c10: #f0f0f0;
 
-
-
-// #0b1a16,#233b32,#395e4f,#51806c,#66a288,#83b59d,#a0c8b3,#bedbc9,#dbeedf
-
 $p1: #dbeedf;
 $p2: #cce7d6;
 $p3: #a0c8b3;
@@ -47,10 +43,13 @@ $p9: #10352a;
     $c9: #303030;
     $c10: #181818;
 
-    $p3: #043110;
-    $p4: #4e7d5f;
-    $p5: #8cbd9f;
-    $p6: #9ec7a0;
-    $p7: #aeccb4;
-    $p8: #cbedcd;
+    $p1: #1c352c;
+    $p2: #233b32;
+    $p3: #395e4f;
+    $p4: #51806c;
+    $p5: #66a288;
+    $p6: #83b59d;
+    $p7: #a0c8b3;
+    $p8: #bedbc9;
+    $p9: #dbeedf;
 }
