--- a/themes/supersimple/assets/styles/widgets.scss
+++ b/themes/supersimple/assets/styles/widgets.scss
@@ -81,6 +81,7 @@
             height: 4rem;
             min-width: 6rem;
             object-fit: cover;
+            border-radius: 0.25rem;
         }
 
         .postlist-item-text {
