Removes umami analytics

--- a/themes/supersimple/layouts/partials/head.html
+++ b/themes/supersimple/layouts/partials/head.html
@@ -5,7 +5,7 @@
 
     <script defer src="/_vercel/insights/script.js"></script>
 
-    <script async defer data-website-id="48f111c6-d1ca-4d7b-813f-dbcc0ea25c5c" src="https://stats.rohanmenon.com/umami.js"></script>
+    {{/*  <script async defer data-website-id="48f111c6-d1ca-4d7b-813f-dbcc0ea25c5c" src="https://stats.rohanmenon.com/umami.js"></script>  */}}
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
