Fixes footer svg not rendering in Safari

--- a/themes/supersimple/assets/styles/footer.scss
+++ b/themes/supersimple/assets/styles/footer.scss
@@ -12,7 +12,7 @@ footer {
             min-height: 3.5rem;
             flex-shrink: 0;
             margin: auto;
-
+            height: 100%;
             shape-rendering: geometricPrecision;
         }
     }
