Changes figure caption padding

--- a/themes/supersimple/assets/styles/shortcodes.scss
+++ b/themes/supersimple/assets/styles/shortcodes.scss
@@ -330,7 +330,7 @@ figure {
   }
 
   figcaption {
-    padding: 0 4rem;
+    padding: 0 10%;
     text-align: center;
     color: $c4;
     font-style: italic;
