--- a/themes/supersimple/layouts/shortcodes/connect-card.html
+++ b/themes/supersimple/layouts/shortcodes/connect-card.html
@@ -8,7 +8,7 @@
         wireless technologies who thrives in fast-paced, collaborative
         environments.
       </p>
-      <a class="link-button" href="/media/resume.pdf">
+      <a class="link-button" href="/media/resume-1-16.pdf">
         {{ partial "icon" "pdf" }}
         <span>PDF Resume</span>
       </a>
