Skips title animation if coming from the same page

--- a/themes/supersimple/assets/styles/header.scss
+++ b/themes/supersimple/assets/styles/header.scss
@@ -82,6 +82,17 @@ header {
                             }
                         }
                     }
+
+                    &.no-animate {
+                        .letters {
+                            .word {
+                                .letter {
+                                    animation-play-state: paused;
+                                    animation-delay: -1s;
+                                }
+                            }
+                        }
+                    }
                 }
             }
 
