--- a/themes/supersimple/layouts/partials/header.html
+++ b/themes/supersimple/layouts/partials/header.html
@@ -34,6 +34,17 @@
           {{- end }}
         </div>
       </div>
+      <script>
+        // Check if the previous page was the same as the current page
+        // If so, then add the class "no-animate" to the title element
+        if (document.referrer) {
+          const referrer = document.referrer.split("?")[0];
+          const current = window.location.href.split("?")[0];
+          if (referrer === current) {
+            document.querySelector(".title").classList.add("no-animate");
+          }
+        }
+      </script>
     </div>
     <div class="nav-date">
       <nav>
