--- a/themes/supersimple/assets/styles/_main.scss
+++ b/themes/supersimple/assets/styles/_main.scss
@@ -9,6 +9,7 @@
 @import "./pagination.scss";
 @import "./resume.scss";
 @import "./connect-card.scss";
+@import "./print.scss";
 
 body {
     margin: 0;
