--- a/themes/supersimple/assets/styles/resume.scss
+++ b/themes/supersimple/assets/styles/resume.scss
@@ -34,7 +34,8 @@
           white-space: nowrap;
           align-self: flex-end;
           margin-top: -0.23em;
-        }
+          transform: translateY(-3px);
+       }
       }
 
       .res-item-body {
