--- a/themes/supersimple/assets/styles/print.scss
+++ b/themes/supersimple/assets/styles/print.scss
@@ -1,110 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;900&display=swap');
-body:has(.resume-pdf) {
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;900&display=swap");
+body:has(.page) {
+  font-family: "Work Sans" !important;
+  background-color: #a0a0a0;
+
+  header,
+  footer {
+    display: none;
+  }
+  .content {
+    box-sizing: border-box;
+    overflow: hidden;
+    max-width: unset;
+    padding: 0;
+    margin: 0;
+
+    .post {
+      box-sizing: border-box;
+      padding: 0.35in 0.5in 0.5in 0.35in;
+      max-height: 100%;
+      max-width: unset;
+      width: 8.5in;
+      height: 11in;
+      background: white;
+    }
+  }
+
+  h1 {
     font-family: "Work Sans" !important;
-    background-color: #a0a0a0;
-    
-    header, footer {
-        display: none;
-    }
-    .content {
-        box-sizing: border-box;
-        overflow: hidden;
-        max-width: unset;
-        padding: 0;
-        margin: 0;
+    text-transform: none;
+    font-size: 23pt;
+    font-weight: 700 !important;
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
 
-        .post {
-            box-sizing: border-box;
-            padding: .35in .5in .5in .35in;
-            max-height: 100%;
-            max-width: unset;
-            width: 8.5in;
-            height: 11in;
-            background: white;
-        }
-    }
+  .subtitle {
+    font-size: 11pt;
+    margin-bottom: 10px;
+    color: black;
+    font-weight: 500;
+  }
 
-    h1 {
-        font-family: "Work Sans" !important;
-        text-transform: none;
-        font-size: 23pt;
-        font-weight: 700 !important;
+  .res-pdf-row {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 12px;
+
+    &.section-label {
+      margin-top: 16px;
+      margin-bottom: 7px;
+    }
+    .col-1 {
+      flex: 1;
+      text-align: right;
+
+      .res-pdf-dates {
+        font-size: 10pt;
+        color: #585858;
+      }
+
+      h2 {
+        font-size: 11.5pt;
+        font-weight: 700;
         margin-top: 0;
-        margin-bottom: 5px;
+        margin-bottom: 0;
+      }
     }
 
-    .subtitle {
-        font-size: 11pt;
-        margin-bottom: 10px;
+    .col-2 {
+      flex: 6;
+
+      h3 {
+        font-size: 11.5pt;
+        font-weight: 500;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
+      hr {
+        border: none;
+        border-top: 0.12em solid #aaa;
+      }
+
+      p,
+      li,
+      ul {
+        color: #3f3f3f;
+        font-size: 10pt;
+        margin-top: 4px;
+        margin-bottom: 3px;
+        line-height: 1.1;
+      }
+
+      ul {
+        list-style-type: none;
+        padding-inline-start: 22px;
+        margin-top: 0;
+      }
+
+      ul li {
+        position: relative;
+        /* margin-top: 8px; */
+      }
+
+      ul li:before {
+        content: "-";
+        position: absolute;
+        margin-left: -20px;
+      }
     }
-    
-    .res-pdf-row {
-        display: flex;
-        gap: 20px;
+  }
+  .cl-row {
+    display: flex;
+    gap: 65px;
+
+    .cl-aside {
+      flex-basis: 25%;
+      text-align: right;
+      h1 {
+        font-size: 18pt;
+        font-weight: 700;
+        margin-top: 0;
         margin-bottom: 12px;
+        color: black;
+      }
+      .cl-subtitle p {
+        font-size: 11pt;
+        margin: 3px 0;
+        color: black;
+      }
+    }
 
-        &.section-label {
-            margin-top: 16px;
-            margin-bottom: 7px;
-        }
-        .col-1 {
-            flex: 1;
-            text-align: right;
-
-            .res-pdf-dates {
-                font-size: 10pt;
-                color: #585858;
-            }
-
-            h2 {
-                font-size: 11.5pt;
-                font-weight: 700;
-                margin-top: 0;
-                margin-bottom: 0;
-            }
-        }
-        
-        .col-2 {
-            flex: 6;
-
-            h3 {
-                font-size: 11.5pt;
-                font-weight: 500;
-                margin-top: 0;
-                margin-bottom: 0;
-            }
-
-            hr {
-                border: none;
-                border-top: 0.12em solid #aaa;
-            }
-
-            p, li, ul {
-                color: #585858;
-                font-size: 10pt;
-                margin-top: 4px;
-                margin-bottom: 3px;
-                line-height: 1.1;
-            }
-
-            ul {
-                list-style-type: none;
-                padding-inline-start: 22px;
-                margin-top: 0;
-            }
-
-            ul li {
-                position: relative;
-                /* margin-top: 8px; */
-            }
-
-            ul li:before {
-                content: '-';
-                position: absolute;
-                margin-left: -20px;
-            }
+    .cl-main {
+        flex-basis: 75%;
+        align-self: flex-end;
+        padding-top: 120px;
+        p {
+            color: black;
+            font-size: 11pt;
         }
     }
+  }
+}
+
+.page.more-margin {
+    padding: 0.4in;
+    padding-right: 0.5in;
+    height: 100%;
 }
 
 // body {
@@ -132,8 +174,6 @@ body:has(.resume-pdf) {
 //     --c14: #0a0a0a;
 //     --c15: #000000;
 // }
-
-
 
 // hr {
 //     margin-top: 10px;
