code and video style changes

--- a/themes/supersimple/assets/styles/shortcodes.scss
+++ b/themes/supersimple/assets/styles/shortcodes.scss
@@ -337,6 +337,10 @@ figure {
   }
 
   &.video {
+    border-radius: $border-radius;
+    overflow: hidden;
+    background-color: $c9;
+
     video {
       width: 100%;
     }
