Hides pages from 404 search

--- a/themes/supersimple/layouts/404.html
+++ b/themes/supersimple/layouts/404.html
@@ -46,7 +46,7 @@
   }
 
   const sitelist = [
-    {{ range .Site.Pages -}}
+    {{ range where .Site.Pages ".Params.hidden" "ne" true -}}
     {
       title: "{{ .Title }}",
       parent: "{{if .Parent}}{{ .Parent.Title }}{{end}}",
