Content and style changes

--- a/themes/supersimple/layouts/_default/baseof.html
+++ b/themes/supersimple/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 <html>
 {{- partial "head.html" . -}}
 
-<body>
+<body {{with .File }}data-hugo-markdown="{{ .Path }}"{{ end }}>
     <div class="content">
         {{- partial "header.html" .}}
         
