--- a/themes/supersimple/assets/styles/header.scss
+++ b/themes/supersimple/assets/styles/header.scss
@@ -19,10 +19,8 @@ header {
 
         .path-title {
             .title {
-                h1 {
-                    margin: 0;
-                    margin-top: 1.2rem;
-                }
+                margin-top: 1rem;
+                h1 { margin: 0; }
 
                 @keyframes slide-up-kf {
                     0% {
