--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -9,7 +9,7 @@
             </div>
             I’m an undergraduate student at the University of Washington studying electrical engineering. I love working on projects involving electronics, software and design.
             <div class="footer-spacer"></div>
-            Right now, I work on WISP at the UW Sensor Systems Lab.
+            Right now, I work on the DCGR and WISP projects at the UW Sensor Systems Lab.
         </div>
         <div class="footer-col col-2">
             <div class="footer-label">
