--- a/themes/supersimple/layouts/shortcodes/connect-card.html
+++ b/themes/supersimple/layouts/shortcodes/connect-card.html
@@ -8,9 +8,9 @@
         wireless technologies who thrives in fast-paced, collaborative
         environments.
       </p>
-      <a class="link-button" href="/media/resume-1-16.pdf">
-        {{ partial "icon" "pdf" }}
-        <span>PDF Resume</span>
+      <a class="link-button" href="https://www.linkedin.com/in/rohan-menon-46518415a/">
+        {{ partial "icon" "linkedin" }}
+        <span>LinkedIn</span>
       </a>
     </div>
   </div>
